@@ -548,10 +548,10 @@ class TestTkrzw(unittest.TestCase):
       self.assertEqual(Status.SUCCESS, dbm.Set(key, value, False))
     self.assertEqual(Status.SUCCESS, dbm.ExportKeysAsLines(dest_path))
     self.assertEqual(Status.SUCCESS, dbm.Close())
-    textfile = TextFile()
+    textfile = File()
     self.assertEqual(Status.SUCCESS, textfile.Open(dest_path))
-    self.assertTrue("TextFile" in repr(textfile))
-    self.assertTrue("TextFile" in str(textfile))
+    self.assertTrue("File" in repr(textfile))
+    self.assertTrue("File" in str(textfile))
     self.assertEqual(12, len(textfile.Search("contain", "001")))
     self.assertEqual(3, len(textfile.Search("contain", "001", 3)))
     self.assertEqual(10, len(textfile.Search("begin", "0000001")))
